Restructured components. Removed containers. Added locations to state.

--- a/src/components/DeleteButton.css
+++ b/src/components/DeleteButton.css
@@ -1,7 +1,7 @@
 .danger-button {
-    background: red;
+    background: #FF495F;
     padding: 4px;
-    border-radius: 5px;
+    border-radius: 8px;
     color: #FFF;
     font-size: 0.8em;
     font-family: Arial, Helvetica, sans-serif;
