Changed styling of the marker.

--- a/src/components/Marker.css
+++ b/src/components/Marker.css
@@ -1,10 +1,15 @@
 .marker-text {
-    width: 100%;
     padding: 8px;
-    background: lightskyblue;
-    border: 1px solid black;
-    border-radius: 6px;
+    background:#fff;
+    border: 2px solid black;
+    border-radius: 3px;
     color: #000;
     font-size: 1em;
+    font-weight: 600;
     cursor: pointer;
+    text-align: center;
+}
+
+.marker-text:hover {
+    padding: 12px;
 }
