--- a/src/components/DeleteButton.css
+++ b/src/components/DeleteButton.css
@@ -1,10 +1,10 @@
-.danger-button {
+.delete-button {
     background: #d9534f;
-    width: 80px;
-    height: 34px;
+    width: 65px;
+    height: 25px;
     border-radius: 8px;
     color: #FFF;
-    font-size: 0.8em;
+    font-size: 0.7em;
     font-family: Tahoma, Helvetica, sans-serif;
     text-transform: uppercase;
     cursor:pointer;
