--- a/src/components/SaveLocationForm.css
+++ b/src/components/SaveLocationForm.css
@@ -11,6 +11,14 @@ input {
     cursor: pointer;
 }
 
-button.primary-button {
+.save-button {
     margin-left: 8px;
+    background: blue;
+    padding: 4px;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 0.8em;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    cursor: pointer;
 }
