--- a/src/components/Location.css
+++ b/src/components/Location.css
@@ -1,8 +1,8 @@
 .location {
     cursor:pointer;
-    font-size: 1.4em;
+    font-size: 1.2em;
+    font-weight: 500;
 }
-
 .location:hover {
     opacity: 0.5;
     color: #000;
