--- a/src/components/SaveLocationForm.css
+++ b/src/components/SaveLocationForm.css
@@ -1,25 +1,41 @@
-.save-location-form {
-    border-radius: 10px;
-    background: rgba(0 , 0, 0, 0.2);
-    border: 6px dotted white;
+.save-location-container {
+    border-radius: 10px 10px 0px 0px;
+    background: #f9f9f9;
     width: 100%;
+
+}
+.save-location-form {
     padding: 20px;
 }
 label {
-    font-size: 2em;
+    font-size: 1.4em;
     padding: 10px;
-    color: #fff;
     font-weight: 500;
 }
-input {
-    border: 1px solid grey;
-    padding: 8px;
+input {  
+    padding: 2px;
     border-radius: 4px;
     cursor: pointer;
     min-width: 300px;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.6em;
+    font-size: 1.4em;
 }
 .btn-primary, .btn-success {
     margin-left: 10px;
+}
+.close-btn {
+    float: right;
+    font-size: 1.26em;
+    font-weight: 700;
+    line-height: 1;
+    color: #7B6F6F;
+    opacity: 0.3;
+    background: #f9f9f9;
+    border: none;
+    padding: 10px;
+    border-radius: 0px 10px 0px 0px;
+    cursor: pointer;
+}
+.close-btn:hover {
+    opacity: 1;
 }
